--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "talk-to-javascript",
-  "version": "0.0.1",
+  "name": "web-page-manipulator",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "test": "vitest",
-    "cf-typegen": "wrangler types"
-  },
-  "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.2",
-    "@cloudflare/workers-types": "^4.20241205.0",
-    "typescript": "^5.5.2",
-    "vitest": "2.1.8",
-    "wrangler": "^3.107.3"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "hono": "^4.6.13"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "hono": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.3.9"
   }
 }
